linux-sample-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linuxapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linuxapp
  template:
    metadata:
      labels:
        app: linuxapp
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: linuxapp
        image: nginx
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: linuxapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: linuxapp
